# doc-mate

./: .dockerignore  .env_template  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUG_GUIDE.md  Dockerfile  EVALUATION.md  Makefile  README.md  backup_20251008_163217.sql  debug_chunks.py  docker-compose.ollama.yml  docker-compose.yml  init.sql  main.py  pyproject.toml  pytest.ini  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
DATA/GT/: aiw.json  aiw_golden_data.json  alice_golden_data.json  hegel_golden_data.json  ili_golden_data.json  mam_golden_data.json  mtrx_golden_data.json  ody_golden_data.json
docs/: LOCAL_LLM_OPTIMIZATION.md  OLLAMA_SETUP.md  PRIVACY_MODES.md
notebooks/: 01_gutenberg_reader_analysis.ipynb  02_retrieval_with_qdrant.ipynb  03_modular_approach.ipynb  04_summarize.ipynb  phase1_exploration.ipynb  test_tech_doc_parsing.py
scripts/: create_metrics_tables.sql  debug_gita_pattern.py  generate_ground_truth.py  generate_ground_truth_simple.py  generate_mma_ground_truth.py  migrate.sh  migrate_schema.sql  ollama.sh  reingest_gita.py  remove_chapter_id.sql  stage1_add_multiformat_fixed.sql
tests/: README.md  comprehensive_test_suite.py  test_chat_export_parsing.py  test_conversation_history.py  test_conversation_improvements.py  test_conversation_metadata.py  test_conversation_search.py  test_conversation_topk.py  test_edge_cases_comprehensive.py  test_ephemeral_mode.py  test_gita_search_quality.py  test_mode_switching.py  test_phoenix_ephemeral.py
(+68 files in other folders)
