[project]
name = "doc-mate"
version = "0.1.0"
description = "A universal document assistant using LLMs - supports books, tech docs, scripts, reports, and more"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix>=5.5.0",
    "gradio>=5.49.1",
    "matplotlib>=3.10.6",
    "mcp>=1.16.0",
    "openai>=1.108.2",
    "openinference-instrumentation-openai>=0.1.18",
    "pandas>=2.3.2",
    "pdfplumber>=0.11.0",
    "psycopg2-binary>=2.9.10",
    "qdrant-client>=1.15.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.1",
    "tiktoken>=0.11.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pgcli>=4.3.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
]
